# fastapi-new

./: Makefile  docker-compose.dev.yml  docker-compose.prod.yml  index.html  pyproject.toml
alembic/: env.py
alembic/versions/: 035bdc0d00e9_init_db.py
app/: celery_app.py  main.py
app/core/: settings.py  setttings.py
app/models/: database.py
app/routes/: auth_routes.py  post_routes.py  user_routes.py
app/schema/: auth.py  users.py
app/services/: auth_service.py  post_service.py  user_service.py
app/tasks/: tasks.py
app/templates/: index.html
app/utils/: websocket.py
