[project]
name = "fastapi-dockerc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.7",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 120
lint.select = ["E", "W", "F", "I"]